# pygmu2

./: .cursorrules  .gitignore  CONTRIBUTING.md  LICENSE  OPTIMIZING.md  Pipfile  README.md  TEMPERAMENT_IMPLEMENTATION.md  pyproject.toml  requirements.txt  test_delay_crop_interaction.py
.claude/: settings.local.json
benchmarks/: README_MELTYSYNTH_BENCH.md  benchmark_meltysynth.py  benchmark_pes.py  profile_biquad_vs_svfilter.py
examples/: 00_template_eg.py  01_hello_sine.py  02_play_wav.py  03_looping.py  04_filtering.py  05_flanging.py  06_autowah.py  07_soft_clipping.py  08_write_to_file.py  09_super_saw.py  10_compression.py  10_strudel_sample_map.py  11_dynamics.py  12_audio_library.py  12_strudel_sample_map.py  13_ladder_filter.py  13_random.py  13_random.py-disabled  14_trigger.py  14_trigger.py-disabled  15_reverse_pitch_echo.py  15_sequence.py  16_adsr.py  16_comb_filter.py  17_ladder_filter.py  18_adsr.py  18_adsr.py-disabled  19_sequence.py  19_sequence.py-disabled  19_sequence_examples.py  20_alternative_temperaments.py  20_timewarp.py  21_analog_osc.py  21_sequence_with_durations.py  21_sequence_with_durations.py-disabled  22_function_gen.py  23_convolution.py  24_slice.py  24_slice.py-disabled  25_gating.py  (+21 more)
examples/audio/: README.md
examples/audio/kemar/: README.md
scripts/: MELTYSYNTH_MIDI_LATENCY.md  convert_kemar_to_wav.py  jogshuttle.py  meltysynth_midi_demo.py  profile_score.py  toy_midi_sampler.py  toy_midi_sampler_README.md
src/pygmu2/: __init__.py  __main__.py  adsr_pe.py  adsr_pe.py-disabled  adsr_signal.py  analog_osc_pe.py  array_pe.py  asset_manager.py  audio_library.py  audio_reader_pe.py  audio_renderer.py  biquad_pe.py  blit_saw_pe.py  cache_pe.py  comb_pe.py  compressor_pe.py  config.py  constant_pe.py  control_pe.py  conversions.py  convolve_pe.py  crop_pe.py  debug_utils.py  delay_pe.py  diagnostics.py  dirac_pe.py  dynamics_pe.py  envelope_pe.py  extent.py  extent_window_pe.py  function_gen_pe.py  gain_pe.py  gate_signal.py  identity_pe.py  interpolated_lookup.py  karplus_strong_pe.py  ladder_pe.py  logger.py  loop_pe.py  meltysynth_pe.py  (+45 more)
src/pygmu2/assets/: __init__.py
src/pygmu2/assets/kemar/: README.md
src/pygmu2/meltysynth/: AUDIT.md  VECTORIZATION_REPORT.md  __init__.py  example_render_wav.py  exceptions.py  math_utils.py
src/pygmu2/meltysynth/io/: __init__.py  binary_reader.py
src/pygmu2/meltysynth/midi/: __init__.py  message.py  midi_file.py  sequencer.py
src/pygmu2/meltysynth/model/: __init__.py  generator.py  instrument.py  instrument_info.py  modulator.py  parameters.py  preset.py  preset_info.py  sample_data.py  sample_header.py  soundfont.py  soundfont_info.py  types.py  zone.py  zone_info.py
src/pygmu2/meltysynth/synth/: __init__.py  channel.py  envelope.py  filter_.py  lfo.py  oscillator.py  region_ex.py  region_pair.py  settings.py  synthesizer.py  voice.py  voice_collection.py
tests/: conftest.py  test_adsr_pe.py  test_analog_osc_pe.py  test_analytical_pe.py  test_array_pe.py  test_audio_library.py  test_audio_reader_pe.py  test_audio_renderer.py  test_biquad_pe.py  test_blit_saw_pe.py  test_comb_pe.py  test_compressor_pe.py  test_config.py  test_constant_pe.py  test_control_pe.py  test_conversions.py  test_convolve_pe.py  test_crop_pe.py  test_delay_pe.py  test_dynamics_pe.py  test_envelope_pe.py  test_extend_mode.py  test_extent.py  test_function_gen_pe.py  test_gain_pe.py  test_karplus_strong_pe.py  test_ladder_pe.py  test_loop_pe.py  test_meltysynth.py  test_mix_pe.py  test_mp3_reader_pe.py  test_piecewise_pe.py  test_portamento_pe.py  test_processing_element.py  test_ramp_pe.py  test_random_choice_pe.py  test_random_pe.py  test_random_select_pe.py  test_renderer.py  test_reset_pe.py  (+20 more)
