[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pygmu2 = ["assets/kemar/*.wav", "assets/kemar/README.md"]

[project]
name = "pygmu2"
version = "0.1.0"
description = "A framework for generating and processing digital audio"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "R. Dunbar Poor", email = "r@alum.mit.edu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.10.0",
    "sounddevice>=0.4.0",
    "soundfile>=0.12.0",
    "numba>=0.57.0",
    "mido>=1.3.0",
    "python-rtmidi>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
# For systems with SSL certificate issues (common on macOS with python.org Python)
ssl = [
    "certifi>=2023.0.0",
]
# miniaudio: MP3 / FLAC / OGG decoding for Mp3ReaderPE
audio = [
    "miniaudio>=1.46",
]
# PySide6 (Qt 6) GUI for examples like jogshuttle_qt.py
gui = [
    "pyside6>=6.5.0",
]
# Google Drive OAuth support
gdrive = [
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "requests>=2.0.0",
]

[project.scripts]
# Add CLI entry points here if needed

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--verbose",
]

[tool.black]
line-length = 88
target-version = ['py312', 'py313']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

# Dependency groups (PEP 735) - used by uv
[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
